# clavenar-ctl

./: AGENTS.md  Cargo.toml  README.md
.github/scripts/: assemble_repositories.py
.github/workflows/: ci.yml
docs/: SEQUENCES.md
docs/clients/: README.md  claude-code.md  cline.md  codex.md  continue.md  cursor.md  generic-stdio.md
src/: config.rs  credentials.rs  main.rs
src/cmd/: agents.rs  agents_certify.rs  assurance.rs  auth.rs  bootstrap.rs  doctor.rs  import_provider_audit.rs  import_scanner.rs  import_workloads.rs  init.rs  mcp_bridge.rs  migrate.rs  mod.rs  pending.rs  policy.rs  policy_exchange.rs  policy_install.rs  policy_lab.rs  policy_library.rs  policy_scaffold.rs  regulatory.rs
tests/: cli_integration.rs
