[package]
# Crate name matches the warden-* repo family convention
# (warden-sdk, warden-hil, warden-proxy, …). The binary itself stays
# `wardenctl` — single-word, like `kubectl` shipped from the
# `kubernetes` repo — so the operator UX in warden-specs/TECH_SPEC.md#agent-onboarding-wao §9 reads
# verbatim as the command line.
name = "warden-ctl"
version = "0.1.0"
edition = "2024"
description = "Operator CLI for Agent Warden — register agents, drive lifecycle, and verify the chain."
license = "Apache-2.0"

[[bin]]
name = "wardenctl"
path = "src/main.rs"

[dependencies]
# Path-dep on warden-sdk (sibling repo, not a Cargo workspace).
warden-sdk = { path = "../warden-sdk" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde", "clock"] }
anyhow = "1"
thiserror = "1"
url = "2.5"
# OS-correct config + cred dir resolution. `~/.warden/...` on Unix,
# `%APPDATA%\warden\...` on Windows — the latter free-of-charge.
directories = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# `unverified_decode` peeks at JWT payload claims (sub/iss/exp) for
# `whoami` display — server is the authoritative verifier; this is
# best-effort decode only.
base64 = "0.22"
# Doctor probes `/health` on every warden service over HTTP/HTTPS;
# rustls keeps the build static and avoids the system OpenSSL dep.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# Init scaffolds files; doctor + policy emit them. Tempfile is used
# by the policy module's unit tests too.
tempfile = "3"

[dev-dependencies]
# `assert_cmd` lets the integration tests spawn `cargo run --bin wardenctl`
# and assert exit codes / stdout shape, matching the CLI contract from
# spec §9.3.
assert_cmd = "2"
predicates = "3"
